syntax = "proto3";

package SMSRateLimiterAPI;

service SMSRateLimiterGrpc {
	rpc CanSendSMSMessage(CanSendSMSRequest) returns (CanSendResponse);
}

message CanSendSMSRequest {
	string phoneNumber = 1;
	string accountId = 2;
}

message CanSendResponse {
	bool canSend = 1;
	optional string reason = 2;
}